<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.LoginFragment"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="@dimen/login_der_izq"
        android:layout_marginRight="@dimen/login_der_izq"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/ucr_logo_login"/>

        <EditText
            android:id="@+id/login_nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Correo UCR"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edittext"/>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/login_espacio_items">

            <EditText
                android:id="@+id/login_contrasenna"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Contraseña"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/rounded_edittext" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_marginRight="10dp"
                android:src="@drawable/hide_password"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <Button
            android:id="@+id/login_boton_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Iniciar Sesión"
            android:textColor="#FFFFFF"
            android:layout_marginTop="@dimen/login_espacio_items"
            android:background="@drawable/boton_login_celeste"></Button>

        <Button
            android:id="@+id/login_reset_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Olvidaste la contraseña?"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="@dimen/login_espacio_items"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="@dimen/login_der_izq"
        android:layout_marginRight="@dimen/login_der_izq"/>

    <TextView
        android:id="@+id/login_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crea una cuenta"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>